--- a/index.html.hbs
+++ b/index.html.hbs
@@ -20,7 +20,7 @@
 			</div>
 
 			<div class="message">
-				<h1>It's running! Hello from Uttarakhand !!!</h1>
+				<h1>It's running! Hello from Himachal !!!</h1>
 				<h2>Congratulations, you successfully deployed a container image to Cloud Run</h2>
 			</div>
 		</div>
